# TileQC

./: .replit  app.py  excel_export.py  forms.py  forms_admin.py  models.py  pyproject.toml  replit.md
attached_assets/: Pasted--Complete-Ceramic-Tile-Quality-Control-Application-Replit-Implementation-Guide-Project-Over-1756118476829_1756118476830.txt  Pasted--DEVELOPMENT-PROMPT-Ceramic-Tile-Quality-Control-Application-Project-Requirements-Build-a-c-1756118628151_1756118628151.txt  Pasted--div-class-card-border-0-shadow-sm-style-div-class-card-header-bg-white-d-flex-j-1756133789943_1756133789943.txt  Pasted--div-class-form-container-Header-Section-div-class-header-section--1756133329499_1756133329500.txt  Pasted--div-id-reportContent-Content-will-be-loaded-based-on-selected-report-type--1756252519964_1756252519965.txt  Pasted--margin-0-padding-0-box-sizing-border-box-body-font-family-Ari-1756133249873_1756133249874.txt  Pasted-Complete-Ceramic-Tile-Quality-Control-Application-Replit-Implementation-Guide-Project-Overview-B-1756118620273_1756118620274.txt  Pasted-FOUR-BISCUIT-Carreau-cuit-Fissure-Ecorne-Cuisson-Feuillet-Plan-it-Visuel-Absence-de-fissure--1756214506839_1756214506839.txt  Pasted-Optimize-your-existing-Flask-application-to-efficiently-record-quality-control-measurements-and-auto-1756240934890_1756240934891.txt  R2-F10-LABO Fiche controle grammage email_1756126019501.xlsx  R2-F11-LABO Controle de classification------1_1756126019502.xls  R2-F14-LABO Fiche controle de décharge PDE---2_1756203238728.xls  R2-F7-LABO Fiche controle Résistance-------2_1756203238727.xls  (+11 more)
(+75 files in other folders)
