[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.43",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "pandas>=2.3.2",
    "matplotlib>=3.10.5",
    "reportlab>=4.4.3",
    "werkzeug>=3.1.3",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
    "apscheduler>=3.11.0",
    "trafilatura>=2.0.0",
]
